--- a/public/css/app.css
+++ b/public/css/app.css
@@ -39,7 +39,11 @@
 .skin-blue .main-header .navbar .sidebar-toggle:hover {
     background-color: #f48677 !important;
 }
-
+@media (max-width: 767px){
+.skin-blue .main-header .navbar .dropdown-menu li a {
+    color: #666 !important;
+}
+}
 /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
  * Copyright 2011-2016 Twitter, Inc.
